# music-video-circ

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  run_app.py
.github/workflows/: ci.yml
app/assets/presets/: minimal_ring.json
app/cli/: analyze_audio.py
app/core/: analysis.py  ffmpeg_utils.py  logging_cfg.py  mapping.py  preset_manager.py
app/core/render/: export_ffmpeg.py  preview.py
app/core/visual_engine/: background.py  bars.py  base.py  center_image.py  painter.py  ring.py  types.py
app/tests/: test_analysis.py  test_mapping.py  test_painter_smoke.py  test_preset_manager.py
app/ui/: main_window.py
app/ui/panels/: audio_panel.py  background_panel.py  center_image_panel.py  output_panel.py  visual_panel.py
assets/presets/: bass_burst.json  clean_spectrum.json  halo.json  minimal_ring.json
tests/: test_analysis.py  test_preset_manager.py
