[tool.poetry]
name = "ncsviz"
version = "0.1.0"
description = "Music visualization app"
authors = ["NCSViz Developers <dev@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
PySide6 = "^6.7"
numpy = "^1.26"
scipy = "^1.13"
librosa = "^0.10.2"
soundfile = "^0.12"
pydantic = "^2.7"
pyqtgraph = "^0.13"
Pillow = "^10.3"
imagehash = "^4.3"
typing-extensions = "^4.12"
pytest = "^8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
